--- a/src/components/selectedMovie/SelectedMovie.scss
+++ b/src/components/selectedMovie/SelectedMovie.scss
@@ -2,6 +2,7 @@
   background-color: rgba(128, 128, 128, 0.685);
   border-radius: 1rem;
   padding: 2rem;
+  max-width: 60%;
 
   h1 {
     font-weight: lighter;
