--- a/src/components/movie/Movie.module.scss
+++ b/src/components/movie/Movie.module.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
   min-height: 30rem;
+  cursor: pointer;
 
   img {
     height: 90%;
