--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -3,6 +3,7 @@
   border-radius: 1rem;
   padding: 2rem;
   max-width: 60%;
+  text-align: center;
 
   h1 {
     font-weight: lighter;
@@ -14,21 +15,23 @@
   }
 }
 
-.chosenMovie {
+.container {
   display: flex;
   justify-content: space-evenly;
+  text-align: left;
 
   img {
     padding: 1rem;
     max-height: 16rem;
   }
 
-  p {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+
+  li {
     margin: 1rem;
   }
-}
-
-.movieDetails {
-  text-align: left;
-  padding-left: 1rem;
 }
