--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import './textStyles.scss';
+@import './variables.scss';
+
 body {
   margin: 0;
 }
@@ -8,11 +11,10 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #282c34;
+  background-color: $color-background;
   color: white;
-  font-size: calc(10px + 2vmin);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 18px; // our mobile default size
+  font-family: $font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
