--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,5 +15,8 @@ $space-medium: 16px;
 $space-big: 24px;
 $space-ultra: 48px;
 
+// Size
+$height: 44px; // minimun interaction size recommended for mobile
+
 // Media queries
 $media-desktop: 750px;
