selected movie design

--- a/src/components/movieGrid/MovieGrid.module.scss
+++ b/src/components/movieGrid/MovieGrid.module.scss
@@ -8,6 +8,7 @@
 
 @media (min-width: $media-desktop) {
   .movieGrid {
+    max-width: $width-container;
     grid-template-columns: repeat(4, 1fr);
     gap: $space-big;
   }
