--- a/src/variables.scss
+++ b/src/variables.scss
@@ -16,6 +16,7 @@ $space-big: 24px;
 $space-ultra: 48px;
 
 // Size
+$width-container: 800px; // maximun width of the containers on desktop
 $height: 44px; // minimun interaction size recommended for mobile
 
 // Media queries
