tweaks to the text

--- a/src/components/movie/Movie.module.scss
+++ b/src/components/movie/Movie.module.scss
@@ -3,8 +3,8 @@
 .movie {
   background-color: $color-navy;
   border-radius: $space-small;
-  overflow: hidden; // to clip the image rounded corners
   aspect-ratio: 9/16; // inverted widescreen
+  overflow: hidden;
   cursor: pointer;
 }
 
