--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -56,6 +56,9 @@
 }
 
 @media (min-width: $media-desktop) {
+  .search {
+    max-width: $width-container;
+  }
   .search header {
     padding: $space-ultra $space-big;
 
