--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,7 @@ $color-navy: #0f4c75;
 $color-blue: #3282b8;
 $color-cyan: #bbe1fa;
 $color-yellow: #f6c90e;
+$color-gray: #303841;
 
 // Font
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
