--- a/src/components/badge/Badge.module.scss
+++ b/src/components/badge/Badge.module.scss
@@ -1,7 +1,7 @@
 .badge {
   background-color: beige;
   p {
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
     padding: 2rem;
   }
