--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -6,34 +6,39 @@
   margin-bottom: 8px;
   position: relative;
   box-sizing: border-box;
-  padding: 25px 20px 20px 20px;
+  padding: 0.3rem;
+
+  input {
+    border: 4px solid #111d5e;
+    margin-right: 5px;
+    border-radius: 10px 10px 10px 10px;
+    width: 100%;
+    height: 2rem;
+    background: #f5f5f5;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1rem;
+  }
+
+  button {
+    width: 3.5rem;
+    height: 2rem;
+    margin-left: -3.5rem;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    img {
+      width: 18px;
+      height: 18px;
+    }
+  }
 }
 
-.search input {
-  border: 4px solid #111d5e;
-  margin-right: 5px;
-  border-radius: 10px 10px 10px 10px;
-  width: 100%;
-  height: 2rem;
-  background: #f5f5f5;
-  outline: none;
-  border: none;
-  border-radius: 1.625rem;
-  padding: 0 3.5rem 0 1.5rem;
-  font-size: 1rem;
-}
-
-.search button {
-  width: 3.5rem;
-  height: 2rem;
-  margin-left: -3.5rem;
-  background: none;
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-
-.search button img {
-  width: 18px;
-  height: 18px;
+.svg_btn {
+  width: 24px;
+  height: 24px;
 }
