--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -1,38 +1,37 @@
-.container {
+.selectedMovie {
   background-color: rgba(128, 128, 128, 0.685);
   border-radius: 1rem;
   padding: 2rem;
   max-width: 60%;
+  text-align: center;
 
   h1 {
     font-weight: lighter;
     margin: 1rem;
   }
+
+  button {
+    cursor: pointer;
+  }
 }
 
-.chosenMovie {
+.container {
   display: flex;
   justify-content: space-evenly;
+  text-align: left;
 
   img {
     padding: 1rem;
     max-height: 16rem;
   }
 
-  p {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+
+  li {
     margin: 1rem;
   }
-}
-
-.close {
-  text-align: right;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.movieDetails {
-  text-align: left;
-  padding-left: 1rem;
 }
