style: make movie card position fixed

--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -9,7 +9,7 @@
 }
 
 .movieCard {
-  position: relative;
+  position: fixed;
   display: flex;
   flex-direction: row;
   background-color: #282c34;
