--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -22,6 +22,7 @@
     border-bottom-left-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
     height: 100%;
+    max-width: 35%;
   }
 
   .loading {
