--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   width: 100vw;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.85);
