--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,37 @@
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 .App {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+.App-header {
+  position: relative;
+  flex-grow: 1;
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  background-color: #282c34;
   color: white;
-  font-size: calc(10px + 2vmin);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0rem 8rem;
+}
+
+.App-searchbar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+
+  p {
+    font-size: 13px;
+    font-weight: lighter;
+    margin: 0;
+    color: #7c818d;
+  }
 }
