--- a/src/components/selectedMovie/SelectedMovie.module.scss
+++ b/src/components/selectedMovie/SelectedMovie.module.scss
@@ -1,37 +1,62 @@
-.selectedMovie {
-  background-color: rgba(128, 128, 128, 0.685);
-  border-radius: 1rem;
-  padding: 2rem;
-  max-width: 60%;
-  text-align: center;
+.movieContainer {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+}
 
-  h1 {
-    font-weight: lighter;
-    margin: 1rem;
+.movieCard {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  background-color: #282c34;
+  border-radius: 0.5rem;
+  height: 24rem;
+  width: 50rem;
+  margin: 4rem;
+
+  img {
+    border-bottom-left-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    height: 100%;
+    max-width: 35%;
   }
 
-  button {
-    cursor: pointer;
+  .loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
   }
 }
 
-.container {
+.movieInfo {
   display: flex;
   justify-content: space-evenly;
-  text-align: left;
+  padding: 1rem;
 
-  img {
-    padding: 1rem;
-    max-height: 16rem;
+  h1 {
+    font-weight: normal;
+    margin-right: 10rem;
   }
+}
 
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-  }
+.closeButton {
+  position: absolute;
+  right: 0rem;
+  top: 0rem;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: white;
+  height: 4rem;
+  width: 4rem;
 
-  li {
-    margin: 1rem;
+  &:hover {
+    cursor: pointer;
   }
 }
