--- a/src/components/movie/Movie.module.scss
+++ b/src/components/movie/Movie.module.scss
@@ -2,20 +2,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 1rem;
-  min-height: 30rem;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+  min-height: 22rem;
   cursor: pointer;
 
   img {
     object-fit: cover;
     height: 90%;
     max-width: 100%;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
   }
+
   h2 {
+    font-size: 1rem;
+    font-weight: lighter;
     margin: 1rem;
-    font-size: 14px;
   }
 }
